# babel-ebook

./: .clippy.toml  .gitignore  .markdownlint-cli2.yaml  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.zh-CN  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  deny.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-failure-email.yml  ci.yml  issue-email.yml  pr-email.yml
crates/babel-ebook/: Cargo.toml
crates/babel-ebook-cli/: Cargo.toml
crates/babel-ebook-cli/src/: main.rs
crates/babel-ebook/locales/: en.yml  es.yml  ja.yml  ko.yml  ru.yml  zh-CN.yml
crates/babel-ebook/prompts/: academic.md  default.md  literary.md  refine.md  technical.md
crates/babel-ebook/src/: cache.rs  checkpoint.rs  chunking.rs  config.rs  core.rs  epub.rs  escape.rs  html.rs  input_formats.rs  lib.rs  pipeline.rs  worker.rs
crates/babel-ebook/src/html/: insertion.rs  mod.rs  progress.rs  selection.rs  translation.rs
crates/babel-ebook/src/input_formats/: docx.rs  srt.rs
crates/babel-ebook/src/pdf_ocr/: backend.rs  epub.rs  mod.rs  post_process.rs  qwen.rs  refine.rs  render.rs  verify.rs
crates/babel-ebook/src/translator/: anthropic.rs  deepseek.rs  http_common.rs  mod.rs  ollama.rs  openai.rs  registry.rs
crates/babel-ebook/tests/: integration_new_features.rs  test_cache.rs  test_chunking.rs  test_config.rs  test_core.rs  test_epub.rs  test_escape.rs  test_html.rs  test_i18n.rs  test_translator.rs  test_validation.rs
desktop/: package.json  playwright.config.ts  pnpm-lock.yaml
desktop/e2e/: api-key-storage.spec.ts  compute-focus.spec.ts  e2e-helpers.ts  model-selection.spec.ts  ollama-real-translation.spec.ts  settings-navigation.spec.ts  tasks-controls.spec.ts  translate-failure.spec.ts  translate-ui.spec.ts  translate-validation.spec.ts  translate.spec.ts
desktop/scripts/: copy-license.mjs  dev-full-translate.mjs  take-screenshots.mjs
desktop/scripts/release/: bump-version.mjs  copy-latest.mjs  copy-release.mjs  release.mjs
desktop/src/: App.css  App.tsx  config.ts  i18n.ts  main.tsx  progress.ts  types.ts  utils.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: args.rs  batch.rs  commands.rs  config.rs  error.rs  keyring.rs  lib.rs  main.rs  queue.rs  task.rs
desktop/src-tauri/wix-locale/: en-US.wxl
desktop/src/components/: EmptyStateIcon.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  LogPanel.tsx  ModelSelect.tsx  NavIcon.tsx  ProviderCard.tsx  ProviderIcon.tsx  RunningPanel.tsx  SettingsTabIcon.tsx  ToastContainer.css  ToastContainer.tsx  Tooltip.css  Tooltip.tsx  TrashIcon.tsx  ValidationBanner.tsx
desktop/src/hooks/: useLogState.ts  useQueue.ts
desktop/src/locales/: en.json  es.json  ja.json  ko.json  ru.json  zh-CN.json
desktop/src/pages/: AboutPage.tsx  ComputeSettingsPage.tsx  GeneralSettingsPage.tsx  LegalPage.tsx  LogsPage.tsx  ModelParamsPage.tsx  OcrPage.css  OcrPage.tsx  OcrSettingsPage.tsx  OutputSettingsPage.tsx  PromptsPage.tsx  QueueSettingsPage.tsx  SettingsLayout.tsx  (+6 more)
docs/: README.en.md  README.es.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  architecture-issues.md  architecture-review-v0.3.3.md  test-gap-analysis.md  ui-ux-audit.md
scripts/: detect-api-keys.sh
tests/fixtures/: corrupted.epub  generate_multichapter_epub.py  multichapter_20.epub  multichapter_5.epub  sample.epub
(+13 files in other folders)
