[package]
name = "babel-ebook"
version.workspace = true
description = "Core EPUB translation library for BabelEbook"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.6"
async-openai = "0.26"
reqwest = { version = "0.12", features = ["json"] }
rbook = { version = "0.7", default-features = false, features = ["write", "threadsafe"] }
kuchiki = "0.8"
markup5ever = "0.10"
tracing = "0.1"
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
url = "2"
sha2 = "0.10"
hex = "0.4"
regex = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
rust-i18n = "3"
mobi = "0.8"
docx-rs = "0.4"

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
